fixed address bar issue on mobile browsers

--- a/src/app/layout.module.scss
+++ b/src/app/layout.module.scss
@@ -1,6 +1,6 @@
 @use "../styles/core.module" as core;
 
-.wrapper {
+.body {
     display: flex;
     flex-direction: column;
     flex-wrap: nowrap;
@@ -8,7 +8,6 @@
     align-items: stretch;
     overflow: auto;
     height: 100%;
-    background: linear-gradient(core.$color-accent, core.$color-accent-faded);
 
     >main {
         display: flex;
