--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -37,8 +37,8 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    height: 100dvh;
-    // background-color: transparentize(core.$color-accent, 0.5);
+    height: 100svh;
+    background: transparent;
     color: core.$color-accent-font;
     margin: 0;
     width: 100%;
