--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -1,17 +1,36 @@
 @use "./core.module" as core;
 
+html {
+    height: 100dvh;
+    max-height: 100dvh;
+    width: 100dvw;
+    background: linear-gradient(core.$color-accent, core.$color-accent-faded);
+    // position: fixed;
+    // top: 0;
+    // bottom: 0;
+    overflow: clip;
+
+    body {
+        min-height: 100dvh;
+        height: auto;
+        // height: 100dvh;
+        width: 100%;
+        overflow: auto;
+    }
+}
+
 html,
 body {
     padding: 0;
     margin: 0;
-    max-height: 100dvh;
-    height: 100dvh;
-    width: 100%;
+    // min-height: 100dvh;
+    // height: 100dvh;
+    // width: 100%;
     // background-image: url(../media/background.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    overflow: hidden;
-    transition: background-position-y 1s ease-in-out;
+    // background-repeat: no-repeat;
+    // background-size: cover;
+    // background: transparent;
+    // overflow: clip;
     scroll-behavior: smooth;
     line-height: 1.5;
 
@@ -135,10 +154,10 @@ body {
     // }
 }
 
-body {
-    height: 100dvh;
-    width: 100dvw;
-}
+// body {
+//     height: 100dvh;
+//     width: 100dvw;
+// }
 
 *,
 *::before,
